Implemented Builder API get info
